--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.110.0"
+pydantic = "^2.6.4"
+firebase-admin = "^6.5.0"
+sqlalchemy = "^2.0.28"
 
 
 [tool.poetry.group.dev.dependencies]
