--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.110.0"
 pydantic = "^2.6.4"
 firebase-admin = "^6.5.0"
 sqlalchemy = "^2.0.28"
+pydantic-settings = "^2.2.1"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
