TRAIL-17 all but with an error connecting to db

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ firebase-admin = "^6.5.0"
 sqlalchemy = "^2.0.28"
 pydantic-settings = "^2.2.1"
 psycopg2-binary = "^2.9.9"
+loguru = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
