--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^2.0.28"
 pydantic-settings = "^2.2.1"
 psycopg2-binary = "^2.9.9"
 loguru = "^0.7.2"
+alembic = "^1.13.1"
 
 
 [tool.poetry.group.dev.dependencies]
