--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic-settings = "^2.2.1"
 psycopg2-binary = "^2.9.9"
 loguru = "^0.7.2"
 alembic = "^1.13.1"
+python-jose = "^3.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
