--- a/tox.ini
+++ b/tox.ini
@@ -17,5 +17,5 @@ skip_install = true
 allowlist_externals = poetry  
 commands_pre =  
     poetry install  
-commands = poetry run pytest --cov=user_microservice --cov-report=xml --cov-config=tox.ini --cov-branch
+commands = poetry run pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch
 
