--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ loguru = "^0.7.2"
 alembic = "^1.13.1"
 python-jose = "^3.3.0"
 httpx = "^0.27.0"
+orjson = "^3.10.1"
 
 
 [tool.poetry.group.dev.dependencies]
