--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=PI-Trailblazer_user_microservice
 sonar.organization=trailblazer
-
+sonar.python.coverage.reportPaths=coverage.xml
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=user_microservice
 #sonar.projectVersion=1.0
