--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,7 @@
 name: Test
 on:
+  workflow_dispatch:
   pull_request:
-    branches:
-      - main
     types: [opened, synchronize, reopened]
 
 jobs:
