--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
+      - name: Setup poetry
+        run: |
+          pip install --upgrade pip setuptools
+          pip install poetry
       - name: Install tox and any other packages
-        run: pip install tox
+        run: poetry install --no-interaction
       - name: Setup docker
         run: docker compose -f compose.test.yml up -d
       - name: Run tox
