updated sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,7 @@ sonar.organization=trailblazer
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.sources = app/
 sonar.exclusions=app/tests/**/*
+sonar.tests=app/tests/
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=user_microservice
 #sonar.projectVersion=1.0
