--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
 name: Test
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 
