Coverage detection should work now

--- a/tox.ini
+++ b/tox.ini
@@ -17,5 +17,7 @@ skip_install = true
 allowlist_externals = poetry  
 commands_pre =  
     poetry install  
-commands = poetry run pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch
+commands = 
+    poetry run coverage run --branch --source=app -m pytest
+    poetry run coverage xml
 
