--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ alembic = "^1.13.1"
 python-jose = "^3.3.0"
 httpx = "^0.27.0"
 orjson = "^3.10.1"
+pillow = "^10.3.0"
+python-multipart = "^0.0.9"
 
 
 [tool.poetry.group.dev.dependencies]
